Fixed swagger documentation issues.
